force-app/main/default/objects/Contact/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dealer_Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSISTANT COLLISION CENTER MGR</fullName>
            </value>
            <value>
                <fullName>ASSISTANT PARTS MANAGER</fullName>
            </value>
            <value>
                <fullName>ASSISTANT SERVICE MANAGER</fullName>
            </value>
            <value>
                <fullName>COLLISION CTR OFFICE MANAGER</fullName>
            </value>
            <value>
                <fullName>CONTROLLER</fullName>
            </value>
            <value>
                <fullName>CREDIT MANAGER</fullName>
            </value>
            <value>
                <fullName>CUSTOMER RELATIONS MANAGER</fullName>
            </value>
            <value>
                <fullName>CUSTOMER RETENTION DIRECTOR</fullName>
            </value>
            <value>
                <fullName>DEALER BODY SHOP MANAGER</fullName>
            </value>
            <value>
                <fullName>DEALER PRINCIPAL</fullName>
            </value>
            <value>
                <fullName>FINANCIAL SERVICES MANAGER</fullName>
            </value>
            <value>
                <fullName>FLEET MANAGER</fullName>
            </value>
            <value>
                <fullName>GENERAL MANAGER</fullName>
            </value>
            <value>
                <fullName>GENERAL SALES MANAGER</fullName>
            </value>
            <value>
                <fullName>INTERNET SALES</fullName>
            </value>
            <value>
                <fullName>LEASING MANAGER</fullName>
            </value>
            <value>
                <fullName>OFFICE MANAGER</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>PARTS DIRECTOR</fullName>
            </value>
            <value>
                <fullName>PARTS MANAGER</fullName>
            </value>
            <value>
                <fullName>PRE-OWNED CAR MANAGER</fullName>
            </value>
            <value>
                <fullName>PRE-OWNED SALESPERSON</fullName>
            </value>
            <value>
                <fullName>SALES BDC</fullName>
            </value>
            <value>
                <fullName>SALES CONSULTANT</fullName>
            </value>
            <value>
                <fullName>SALES CONSULTANT-PRGM ENROLLED</fullName>
            </value>
            <value>
                <fullName>SALES MANAGER</fullName>
            </value>
            <value>
                <fullName>SALES MANAGER-PROGRAM ENROLLED</fullName>
            </value>
            <value>
                <fullName>SALES OTHER</fullName>
            </value>
            <value>
                <fullName>SALES PERSONNEL</fullName>
            </value>
            <value>
                <fullName>SERVICE BDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>