force-app/main/default/objects/Contact/fields/SmartPath_Pro__c.field-meta.xml
<CustomField>
    <fullName>SmartPath_Pro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartPath Pro</label>
    <type>Checkbox</type>
</CustomField>