force-app/main/default/objects/Contact/fields/Truck_Champion__c.field-meta.xml
<CustomField>
    <fullName>Truck_Champion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Truck Champion</label>
    <type>Checkbox</type>
</CustomField>